# templar-plus-plus

./: .gitignore  LICENSE  README.md  meson.build
include/: packet_parser.hpp
include/yls/: tmp.hpp
src/: meson.build  packet_parser.cpp  templar.cpp
tests/: meson.build  test_packet_parser.cpp  test_tmp.cpp
